tests/ui/fn/mut-arg-of-borrowed-type-meant-to-be-arg-of-mut-borrow.stderr
error[E0308]: mismatched types
  --> $DIR/mut-arg-of-borrowed-type-meant-to-be-arg-of-mut-borrow.rs:7:14
   |
LL | fn change_object(mut object: &Object) {
   |                              ------- expected due to this parameter type
LL |     let object2 = Object;
LL |     object = object2;
   |              ^^^^^^^ expected `&Object`, found `Object`
   |
help: you might have meant to mutate the pointed at value being passed in, instead of changing the reference in the local binding
   |
LL ~ fn change_object(object: &mut Object) {
LL |     let object2 = Object;
LL ~     *object = object2;
   |

error: value assigned to `object` is never read
  --> $DIR/mut-arg-of-borrowed-type-meant-to-be-arg-of-mut-borrow.rs:13:5
   |
LL |     object = &object2;
   |     ^^^^^^
   |
note: the lint level is defined here
  --> $DIR/mut-arg-of-borrowed-type-meant-to-be-arg-of-mut-borrow.rs:2:9
   |
LL | #![deny(unused_assignments, unused_variables)]
   |         ^^^^^^^^^^^^^^^^^^
help: you might have meant to mutate the pointed at value being passed in, instead of changing the reference in the local binding
   |
LL ~ fn change_object2(object: &mut Object) {
LL |
LL |     let object2 = Object;
LL ~     *object = object2;
   |

error: variable `object` is assigned to, but never used
  --> $DIR/mut-arg-of-borrowed-type-meant-to-be-arg-of-mut-borrow.rs:10:23
   |
LL | fn change_object2(mut object: &Object) {
   |                       ^^^^^^
   |
   = note: consider using `_object` instead
note: the lint level is defined here
  --> $DIR/mut-arg-of-borrowed-type-meant-to-be-arg-of-mut-borrow.rs:2:29
   |
LL | #![deny(unused_assignments, unused_variables)]
   |                             ^^^^^^^^^^^^^^^^

error[E0597]: `object2` does not live long enough
  --> $DIR/mut-arg-of-borrowed-type-meant-to-be-arg-of-mut-borrow.rs:13:14
   |
LL | fn change_object2(mut object: &Object) {
   |                               - let's call the lifetime of this reference `'1`
LL |
LL |     let object2 = Object;
   |         ------- binding `object2` declared here
LL |     object = &object2;
   |     ---------^^^^^^^^
   |     |        |
   |     |        borrowed value does not live long enough
   |     assignment requires that `object2` is borrowed for `'1`
...
LL | }
   | - `object2` dropped here while still borrowed

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0597.
For more information about an error, try `rustc --explain E0308`.
